Fix ul spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -366,3 +366,9 @@ nav ul li .btn-play{
 	height: 70px;
 	width: 100%;
 }
+
+.item ul{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 640px;
+}
